# movie-anime-discovery

./: .env-template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
account/: admin.py  forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: dashboard.html  edit_profile.html
account/templates/registration/: logged_out.html  login.html  signup.html
media/: admin.py  anilist.py  apis_scraper.py  models.py  tasks.py  tmdb.py  urls.py  views.py
media/management/commands/: api_caching.py
media/migrations/: 0001_initial.py  0002_remove_movie_original_title_movie_adult_and_more.py  0003_alter_movie_genre_ids.py  0004_moviegenre_remove_movie_genre_ids_movie_genre_ids.py  0005_alter_movie_release_date.py  0006_alter_movie_release_date.py  0007_animegenre_anime.py  0008_rename_countryoforigin_anime_country_of_origin.py  0009_alter_anime_episodes.py  0010_anime_cover_image.py  0011_anime_slug_movie_slug.py  0012_rename_averagescore_anime_score_alter_anime_media_id.py  0013_manga.py  0014_alter_manga_title.py  0015_anime_title_english_anime_title_native_and_more.py  0016_savedanime_savedmanga_savedmovie.py
media/templates/media/: _bookmark_button.html  base.html  home.html  save_button.html
media/templates/media/anime/: detail.html  list.html
media/templates/media/manga/: detail.html
mysite/: settings.py  urls.py
tests/: test_account.py
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
theme/templates/: base.html
(+2 files in other folders)
